[gd_scene load_steps=14 format=3 uid="uid://dxt6dvahu0ip6"]

[ext_resource type="Script" uid="uid://bh706o0odwr57" path="res://scenes/player/fairy_boy.gd" id="1_050w0"]
[ext_resource type="Texture2D" uid="uid://c30tmbsxpjufv" path="res://images/fairy.png" id="2_40v30"]
[ext_resource type="Texture2D" uid="uid://bij86fxrrxrbm" path="res://images/sword.png" id="2_kb4bu"]
[ext_resource type="Texture2D" uid="uid://did2o657yhgmi" path="res://images/fairy_2.png" id="3_fdb6c"]
[ext_resource type="Texture2D" uid="uid://djp6ynsc3t00t" path="res://images/sword_light.png" id="6_7yxve"]
[ext_resource type="Script" uid="uid://cr0kegbv4gxph" path="res://scenes/player/rich_text_label.gd" id="6_40v30"]
[ext_resource type="AudioStream" uid="uid://sba4ki0f1j4p" path="res://audio/sfx/sound-effect-twinklesparkle-115095.mp3" id="6_buy15"]
[ext_resource type="AudioStream" uid="uid://cxxgp5pghf6pd" path="res://audio/sfx/sparkling_star_02-99659.mp3" id="7_daq66"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v5v8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_40v30")
}, {
"duration": 1.0,
"texture": ExtResource("3_fdb6c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_050w0"]
size = Vector2(143.5, 164.875)

[sub_resource type="Animation" id="Animation_40v30"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [16.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7yxve"]
resource_name = "sword_light"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [6.95, 12.0, 48.0, 30.0, 15.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fdb6c"]
_data = {
&"RESET": SubResource("Animation_40v30"),
&"sword_light": SubResource("Animation_7yxve")
}

[node name="Fairy" type="CharacterBody2D" groups=["Body"]]
collision_mask = 63
script = ExtResource("1_050w0")

[node name="FairyImg" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_v5v8c")
autoplay = "default"
frame_progress = 0.862048

[node name="Sword" type="Sprite2D" parent="."]
position = Vector2(119, 13)
scale = Vector2(0.0320151, 0.0307292)
texture = ExtResource("2_kb4bu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.25, 2.4375)
shape = SubResource("RectangleShape2D_050w0")

[node name="Timers" type="Node" parent="."]

[node name="Shock" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="BeamTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MagicRegen" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="BeamMarker" type="Marker2D" parent="."]
position = Vector2(61, 11)

[node name="SwordLight" type="PointLight2D" parent="."]
position = Vector2(128, 9)
rotation = 2.95833
scale = Vector2(-2.57586, -1.56624)
color = Color(0.85, 1, 0, 1)
energy = 16.0
texture = ExtResource("6_7yxve")
texture_scale = 0.15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fdb6c")
}

[node name="UI" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
modulate = Color(1, 0, 0, 1)
offset_left = -84.0
offset_top = -124.0
offset_right = 76.0
offset_bottom = -111.0
max_value = 800.0
value = 50.0
show_percentage = false
metadata/_edit_group_ = true

[node name="HealthNumber" type="RichTextLabel" parent="UI"]
offset_left = -38.0
offset_top = -140.0
offset_right = 43.0
offset_bottom = -97.0
text = "8200	"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_40v30")

[node name="MagicBar" type="ProgressBar" parent="UI"]
modulate = Color(0, 0, 1, 1)
offset_left = -84.0
offset_top = -106.0
offset_right = 76.0
offset_bottom = -92.0
max_value = 800.0
value = 50.0
show_percentage = false
metadata/_edit_group_ = true

[node name="MagicNumber" type="RichTextLabel" parent="UI"]
offset_left = -64.0
offset_top = -112.0
offset_right = 57.0
offset_bottom = -87.0
text = "700"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" type="Node" parent="."]

[node name="MagicRegen" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_buy15")
bus = &"SFX"

[node name="HitSfx" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_daq66")
volume_db = -10.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="timeout" from="Timers/Shock" to="." method="_on_shock_timer_timeout"]
[connection signal="timeout" from="Timers/BeamTimer" to="." method="_on_cast_sword_beam_timer_timeout"]
[connection signal="timeout" from="Timers/MagicRegen" to="." method="_on_magic_regen_timer_timeout"]
